2008-08-04  Christopher Bratusek <nano-master@gmx.de>
	* Makefile.in
	* sawfish.spec.in: Sawfish.desktop is now sawfish.desktop

2008-08-04  Janek Kozicki <cosurgi@gmail.com>
	* mark all subdir */Changelog as deprecated

	* lisp/sawfish/wm/focus.jl: add Enter-Click Focus Mode by
	Dagfinn I. Mannsåke (Original Author), Christopher Bratusek
	and Timo Korvola (Simplyfied Code)

	* themes/Crux/theme.jl: Refresh icons patch by Timo Korvola

	* Sawfish.desktop: Update desktop file (again) by Christopher Bratusek

	* configure.in: Bump version requirements: pango 1.16, gtk 2.6, gdk 2.6
	Christopher Bratusek.

	*  src/keys.c, src/frames.c, src/windows.c, src/sawmill_subrs.h,
	man/sawmill.texi: Added Negative-property-p by Teika Kazura
	NOTE: we also need window-setplist

	* src/windows.c, src/sawmill_subrs.h, man/sawmill.texi: Add Window
	prop list & prop del by Teika Kazura.

	* lisp/sawfish/wm/frames.jl: Decorations toolbar windows by Andrea
	Vettorello. This was actually applied in revision 4229.

	* Major C part clean up by Christopher Bratusek

	* Remove .cvsignore files by Christopher Bratusek

	* lisp/sawfish/wm/viewport.jl: Keep Focus on move-window-direction by
	Mark Schreiber.

	* Sawfish.desktop: renamed to sawfish.desktop

2008-07-29  Christopher Bratusek <nano-master@gmx.de>
	* po/make-pot: make this script work again

	* po/POTFILES.in: added. needed by the new make-pot

	* sawfish.spec.in: spec file did use deprecated keywords,
		this patch by Ian Dall fix that.

	* lisp/sawfish/wm/commands/help.jl: the "xterm" command for
		viewing the info file is still hardcoded, instead
		use the user-defined "xterm" command - patch by
		Dagfinn I. Mannsåker.

	* src/Makefile.in: Fix build with -j2 or higher - patch
		by Harald van Dijk

2008-07-28  Christopher Bratusek <nano-master@gmx.de>
	* themer/ : remove the themer from trunk and move
		it to the sawfish-themer branch. The reason
		for doing so, is that rep-glade is not yet