@@ -1,3 +1,7 @@
+2008-08-04  Timo Korvola  <tkorvola@svn.gnome.org>
+	* src/windows.c, src/sawmill_subrs.h, man/sawmill.texi: Rename
+	window-prop-del to window-remprop.
+
 2008-08-04  Christopher Bratusek <nano-master@gmx.de>
 	* Makefile.in
 	* sawfish.spec.in: Sawfish.desktop is now sawfish.desktop
